More changes to try to resolve map marker issue

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <link rel="icon" href="/favicon.ico" />
-<!--  <link rel="stylesheet" href="/leaflet.css">-->
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!-- UIkit CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.6.19/dist/css/uikit.min.css" />
@@ -24,9 +24,9 @@
           integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
           crossorigin="anonymous">
   </script>
-  <link rel="stylesheet" href="./public/css/style.css">
-  <script src="./public/js/script.js"></script>
-
+  <link rel="stylesheet" href="/css/style.css">
+  <script src="/js/script.js"></script>
+  <link rel="stylesheet" href="/leaflet.css">
 
   <title>Metalfest Application</title>
 
